--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "swiper": "^9.1.1",
     "typescript": "4.9.5"
   },
